--- a/app/src/main/res/layout/activity_booking_detail.xml
+++ b/app/src/main/res/layout/activity_booking_detail.xml
@@ -35,6 +35,27 @@
                 app:showDividers="middle">
 
                 <androidx.appcompat.widget.LinearLayoutCompat
+                    android:id="@+id/pickUpStatusView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"
+                    android:orientation="vertical">
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        style="@style/HeadLine_4"
+                        android:paddingHorizontal="@dimen/section_space"
+                        android:text="@string/pickup_status" />
+
+                    <include
+                        android:id="@+id/includePickupStatusLayout"
+                        layout="@layout/pickup_status_item"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:visibility="visible" />
+
+                </androidx.appcompat.widget.LinearLayoutCompat>
+
+                <androidx.appcompat.widget.LinearLayoutCompat
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
