--- a/app/src/main/res/layout/user_info_item.xml
+++ b/app/src/main/res/layout/user_info_item.xml
@@ -25,7 +25,10 @@
                 android:layout_width="@dimen/_75sdp"
                 android:layout_height="@dimen/_75sdp"
                 app:srcCompat="@drawable/profile_place_holder"
-                android:layout_gravity="center_vertical"/>
+                android:layout_gravity="center_vertical"
+                app:strokeColor="@color/black"
+                app:strokeWidth="1dp"
+                android:padding="1dp"/>
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
@@ -111,7 +114,10 @@
                         android:layout_width="@dimen/_55sdp"
                         android:layout_height="@dimen/_55sdp"
                         app:srcCompat="@drawable/place_holder"
-                        android:layout_gravity="center_vertical"/>
+                        android:layout_gravity="center_vertical"
+                        app:strokeColor="@color/black"
+                        app:strokeWidth="1dp"
+                        android:padding="1dp"/>
 
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
