--- a/app/src/main/res/layout/driver_user_detail_item.xml
+++ b/app/src/main/res/layout/driver_user_detail_item.xml
@@ -18,7 +18,10 @@
             android:layout_width="@dimen/_75sdp"
             android:layout_height="@dimen/_75sdp"
             app:srcCompat="@drawable/profile_place_holder"
-            android:layout_gravity="center_vertical"/>
+            android:layout_gravity="center_vertical"
+            app:strokeColor="@color/black"
+            app:strokeWidth="1dp"
+            android:padding="1dp"/>
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
