--- a/app/src/main/res/layout/rv_driver_passengers_item.xml
+++ b/app/src/main/res/layout/rv_driver_passengers_item.xml
@@ -17,7 +17,10 @@
             style="@style/CircleProfileImageStyle"
             android:layout_width="@dimen/_58sdp"
             android:layout_height="@dimen/_58sdp"
-            tools:srcCompat="@drawable/profile_place_holder" />
+            tools:srcCompat="@drawable/profile_place_holder"
+            app:strokeColor="@color/black"
+            app:strokeWidth="1dp"
+            android:padding="1dp"/>
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
