--- a/app/src/main/res/layout/rv_notification_item.xml
+++ b/app/src/main/res/layout/rv_notification_item.xml
@@ -26,7 +26,10 @@
                 style="@style/CircleProfileImageStyle"
                 android:layout_width="@dimen/_65sdp"
                 android:layout_height="@dimen/_65sdp"
-                app:srcCompat="@drawable/profile_place_holder" />
+                app:srcCompat="@drawable/profile_place_holder"
+                app:strokeColor="@color/black"
+                app:strokeWidth="1dp"
+                android:padding="1dp"/>
 
 <!--            <androidx.appcompat.widget.AppCompatTextView-->
 <!--                style="@style/Body_6"-->
