--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -442,6 +442,19 @@
         <item name="shapeAppearanceOverlay">@style/Corner50Percent</item>
     </style>
 
+    <!--  Image Style  -->
+    <style name="CircleProfileImageStyle2">
+        <item name="android:layout_width">@dimen/_28sdp</item>
+        <item name="android:layout_height">@dimen/_28sdp</item>
+        <item name="android:adjustViewBounds">true</item>
+        <item name="contentPadding">0dp</item>
+        <item name="android:scaleType">centerCrop</item>
+        <item name="shapeAppearanceOverlay">@style/Corner50Percent</item>
+        <item name="android:padding">1dp</item>
+        <item name="android:strokeColor">@color/black</item>
+        <item name="android:strokeWidth">@integer/mtrl_calendar_header_orientation</item>
+    </style>
+
     <style name="Corner50Percent">
         <item name="cornerSize">50%</item>
     </style>
