fix settings screens icons

--- a/app/src/main/res/layout/reviews_item.xml
+++ b/app/src/main/res/layout/reviews_item.xml
@@ -130,7 +130,7 @@
 
             <androidx.appcompat.widget.AppCompatTextView
                 style="@style/HeadLine_6"
-                android:text="@string/review" />
+                android:text="@string/my_review" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/tvDriverComment"
