--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -130,6 +130,17 @@
         <item name="android:drawablePadding">@dimen/drawable_padding</item>
     </style>
 
+    <style name="HeadLine_66">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="android:textSize">@dimen/text_size_14</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:fontFamily">@font/noto_sans_bold</item>
+        <item name="android:textColor">@color/on_primary_mirage_color</item>
+        <item name="android:drawablePadding">@dimen/rating_bar_end_space</item>
+    </style>
+
     <style name="HeadLine_7">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
