--- a/app/src/main/res/layout/passengers_info_item.xml
+++ b/app/src/main/res/layout/passengers_info_item.xml
@@ -37,7 +37,7 @@
 
             <androidx.appcompat.widget.AppCompatTextView
                 style="@style/Body_6"
-                android:text="You might share the ride with fellow passengers heading the same way."
+                android:text="@string/you_might_share_the_ride"
                 android:textColor="@color/secondary_cadet_blue_color" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
