--- a/app/src/main/res/layout/activity_booking_detail.xml
+++ b/app/src/main/res/layout/activity_booking_detail.xml
@@ -100,6 +100,13 @@
                         android:layout_height="wrap_content"
                         android:visibility="gone" />
 
+                    <include
+                        android:id="@+id/includePendingDriverPaymentsLayout"
+                        layout="@layout/pending_driver_payments_booking_detail_item"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:visibility="gone" />
+
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
                 <androidx.appcompat.widget.LinearLayoutCompat
