--- a/app/src/main/res/layout/activity_set_up_your_trip.xml
+++ b/app/src/main/res/layout/activity_set_up_your_trip.xml
@@ -64,6 +64,22 @@
 
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        style="@style/HeadLine_4"
+                        android:paddingHorizontal="@dimen/section_space"
+                        android:text="@string/acceptable_payments" />
+
+                    <include
+                        android:id="@+id/includeAcceptablePayments"
+                        layout="@layout/payment_options" />
+
+                </androidx.appcompat.widget.LinearLayoutCompat>
+
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/btnPostTrip"
                     style="@style/PrimaryRoundedButton"
