--- a/app/src/main/res/layout/trip_editable_route_item.xml
+++ b/app/src/main/res/layout/trip_editable_route_item.xml
@@ -179,40 +179,48 @@
 
                     </androidx.appcompat.widget.LinearLayoutCompat>
 
-                    <androidx.appcompat.widget.LinearLayoutCompat
+                    <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
-                        app:divider="@drawable/divider_section_space"
-                        app:showDividers="middle">
+                        >
                         <CheckBox
                             android:id="@+id/checkBoxFlexibleDates"
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:text="@string/flexible"
-                            app:buttonTint="@color/on_primary_green_color" />
+                            app:buttonTint="@color/on_primary_green_color"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toStartOf="@+id/counterLayout"
+                            app:layout_constraintHorizontal_bias="0"
+                            android:maxLines="2"
+                            android:ellipsize="end"
+                            android:layout_marginEnd="8dp" />
 
-                        <RelativeLayout
+                        <LinearLayout
+                            android:id="@+id/counterLayout"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="16dp"
-                            android:layout_marginEnd="16dp"
-                            android:layout_marginTop="-5dp"
+                            android:orientation="horizontal"
+                            android:padding="5dp"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"
                             >
                             <Button
                                 style="@style/PrimaryRoundedButton"
                                 android:id="@+id/removeBtn"
                                 android:layout_width="@dimen/counterBtnRadius"
                                 android:layout_height="@dimen/counterBtnRadius"
-                                android:layout_alignParentStart="true"
-                                android:layout_centerVertical="true"
                                 android:background="@drawable/custom_btn_remove"/>
 
                             <EditText
                                 android:id="@+id/itemQuanEt"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_centerInParent="true"
+                                android:layout_marginHorizontal="8dp"
                                 android:background="@null"
                                 android:focusable="false"
                                 android:inputType="none"
@@ -227,13 +235,11 @@
                                 android:id="@+id/addBtn"
                                 android:layout_width="@dimen/counterBtnRadius"
                                 android:layout_height="@dimen/counterBtnRadius"
-                                android:layout_alignParentEnd="true"
-                                android:layout_centerVertical="true"
                                 android:background="@drawable/custom_btn_add"/>
-                        </RelativeLayout>
+                        </LinearLayout>
 
 
-                    </androidx.appcompat.widget.LinearLayoutCompat>
+                    </androidx.constraintlayout.widget.ConstraintLayout>
 
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
